# clickdown

./: .gitignore  AGENTS.md  ASSIGNED_TASKS_FIX.md  Cargo.toml  LICENSE  PACKAGING.md  README.md  TESTING.md
.aur/: .SRCINFO  PKGBUILD  clickdown.desktop
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs  screen_id.rs
src/api/: auth.rs  client.rs  client_trait.rs  endpoints.rs  mock_client.rs  mod.rs
src/cache/: mod.rs  schema.rs
src/cli/: args.rs  mod.rs  run.rs  tests.rs
src/commands/: debug_ops.rs  mod.rs
src/config/: mod.rs  storage.rs
src/models/: assigned_item.rs  comment.rs  document.rs  inbox_activity.rs  mod.rs  notification.rs  session.rs  task.rs  user.rs  workspace.rs
src/tui/: app.rs  helpers.rs  input.rs  layout.rs  mod.rs  terminal.rs  theme.rs
src/ui/: auth_view.rs  document_view.rs  login_view.rs  mod.rs  screen_id_overlay.rs  sidebar.rs  task_detail.rs  task_list.rs
src/utils/: clipboard.rs  deserializers.rs  mod.rs  query.rs  text.rs  url_generator.rs  url_parser.rs
tests/: app_test.rs  assigned_filter_test.rs  assignee_picker_test.rs  cli_test.rs  fixtures.rs  integration_assigned_tasks.rs  integration_inbox.rs  malformed_parsing_test.rs  snapshot_test.rs  snapshot_test_assigned_tasks_preload.rs  snapshot_test_assigned_view.rs  snapshot_test_inbox.rs  task_parsing_test.rs  tui_test.rs
tests/snapshots/: snapshot_test__assigned_tasks_view_empty.snap  snapshot_test__assigned_tasks_view_loading.snap  snapshot_test__assigned_tasks_view_with_selection.snap  snapshot_test__assigned_tasks_view_with_tasks.snap  (+75 more)
(+285 files in other folders)
